Fix edit cart modal cutoff at bottom on Safari

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -633,7 +633,7 @@ select.input-field {
 }
 
 .custom-modal-overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -1183,7 +1183,7 @@ select.input-field {
   display: flex;
   flex-direction: column;
   z-index: 10;
-  padding-bottom: max(16px, env(safe-area-inset-bottom));
+  padding-bottom: calc(16px + env(safe-area-inset-bottom)) !important;
 }
 
 #btn-confirm-unified {
